Added Serilog Added Hangfire Added Task to get live data every x minutes (Configured in settings) Cleanup and reformatting

--- a/SolarmanApi/appsettings.json
+++ b/SolarmanApi/appsettings.json
@@ -1,26 +1,39 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Override": {},
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
-    },
-    "Kestrel": {
-        "EndPoints": {
-            "Http": {
-                "Url": "http://localhost:5555"
-            }
-        }
-    },
-    "AllowedHosts": "*",
-    "SolarmanApiOptions": {
-        "BaseUrl": "https://api.solarmanpv.com"
-    },
-    "SolarmanAuthenticationOptions": {
-        "issuer": "https://api.solarmanpv.com",
-        "appSecret": "",
-        "appId": "",
-        "email": "",
-        "password": ""
+      }
+    ]
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5555"
+      }
     }
+  },
+  "AllowedHosts": "*",
+  "SolarmanApiOptions": {
+    "BaseUrl": "https://api.solarmanpv.com"
+  },
+  "SolarmanAuthenticationOptions": {
+    "issuer": "https://api.solarmanpv.com",
+    "appSecret": "",
+    "appId": "",
+    "email": "",
+    "password": ""
+  },
+  "CronOptions": [
+    {
+      "serviceName": "ScheduledGetLiveData",
+      "schedule": "*/10 * * * *",
+      "runOnStart": true
+    }
+  ]
 }
