--- a/SolarmanApi/SolarmanApi.csproj
+++ b/SolarmanApi/SolarmanApi.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstraction" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Rest.Net" Version="2.2.2" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Hangfire" Version="1.8.0-rc1" />
+        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.0-rc1" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.0-rc1" />
+        <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+        <PackageReference Include="Rest.Net" Version="2.2.2" />
+        <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
 </Project>
