--- a/SolarmanApi/appsettings.json
+++ b/SolarmanApi/appsettings.json
@@ -20,10 +20,10 @@
   },
   "AllowedHosts": "*",
   "SolarmanApiOptions": {
-    "BaseUrl": "https://api.solarmanpv.com"
+    "BaseUrl": "https://globalapi.solarmanpv.com"
   },
   "SolarmanAuthenticationOptions": {
-    "issuer": "https://api.solarmanpv.com",
+    "issuer": "https://globalapi.solarmanpv.com",
     "appSecret": "",
     "appId": "",
     "email": "",
